[refs #00029] Fix issue with spacing generator
It turns out that an issue in the spacing generation mixin was causing
none of the responsive classes to be generated! By fixing the issue, I
was also able to reduce the number of LOC by a decent amount.

--- a/utilities/_utilities.spacing.scss
+++ b/utilities/_utilities.spacing.scss
@@ -41,22 +41,7 @@ $_spacing-sizes: (
 
 // Use a mixin to build spacing classes, rather than generating them directly.
 // This also allows us to call the mixin from within other loops.
-@mixin _build-spacing() {
-
-  // If we’re not creating responsive classes, these variables won’t exist and
-  // will therefore throw an error. All we’re doing here is assigning them some
-  // null values that will either a) not throw an error or b) will get
-  // overridden automatically if we are generating responsive classes.
-  $alias: null !default;
-  $suffix: null !default;
-
-  // If the `$alias` variable is already set, let’s generate a responsive suffix
-  // out of it.
-  @if ($alias != null) {
-
-    $suffix: '\@' + $alias;
-
-  }
+@mixin _build-spacing($breakpoint: null) {
 
   // Start looping through our different permutations.
   @each $direction in $_spacing-directions {
@@ -64,22 +49,22 @@ $_spacing-sizes: (
     @each $size, $value in $_spacing-sizes {
 
       // Create margin and padding classes.
-      .u-margin#{$direction}#{$size}#{$suffix} {
+      .u-margin#{$direction}#{$size}#{$breakpoint} {
         margin#{$direction}: $value !important;
       }
 
-      .u-padding#{$direction}#{$size}#{$suffix} {
+      .u-padding#{$direction}#{$size}#{$breakpoint} {
         padding#{$direction}: $value !important;
       }
 
     }
 
     // Create zero margin and padding classes.
-    .u-margin#{$direction}-none#{$suffix} {
+    .u-margin#{$direction}-none#{$breakpoint} {
       margin#{$direction}: 0 !important;
     }
 
-    .u-padding#{$direction}-none#{$suffix} {
+    .u-padding#{$direction}-none#{$breakpoint} {
       padding#{$direction}: 0 !important;
     }
 
@@ -104,7 +89,7 @@ $_spacing-sizes: (
 
   @include mq($from: $alias) {
 
-    @include _build-spacing();
+    @include _build-spacing(\@#{$alias});
 
   }
 
